--- a/docs/styles/jsdoc.css
+++ b/docs/styles/jsdoc.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-
 * {
   box-sizing: border-box
 }
@@ -13,7 +11,6 @@ body {
   color: #4d4e53;
   background-color: white;
   margin: 0 auto;
-  padding: 0 20px;
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 16px;
 }
@@ -66,10 +63,12 @@ h1 {
 }
 
 h1.page-title {
-  font-size: 48px;
+  font-size: 40px;
   margin: 1em 30px;
   line-height: 100%;
   word-wrap: break-word;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 h2 {
@@ -90,7 +89,7 @@ h4 {
 
 h4.name {
   color: #fff;
-  background: #6d426d;
+  background: #4c6a75;
   box-shadow: 0 .25em .5em #d3d3d3;
   border-top: 1px solid #d3d3d3;
   border-bottom: 1px solid #d3d3d3;
@@ -98,18 +97,27 @@ h4.name {
   padding: .75em 0 .75em 10px;
 }
 
-h4.name a {
-  color: #fc83ff;
+a {
+  color: #7cafc2;
 }
 
-h4.name a:hover {
-  border-bottom-color: #fc83ff;
+a:hover {
+  border-bottom-color: #7cafc2;
+}
+
+a:hover,
+a:active {
+  color: #7cafc2;
 }
 
 h5, .container-overview .subsection-title {
   font-size: 120%;
   letter-spacing: -0.01em;
   margin: 8px 0 3px 0;
+}
+
+h3.subsection-title {
+  color: #75bd5c;
 }
 
 h6 {
@@ -126,7 +134,6 @@ tt, code, kbd, samp {
 }
 
 .class-description {
-  font-size: 130%;
   line-height: 140%;
   margin-bottom: 1em;
   margin-top: 1em;
@@ -138,8 +145,8 @@ tt, code, kbd, samp {
 
 #main {
   float: right;
-  min-width: 360px;
-  width: calc(100% - 240px);
+  width: calc(100% - 280px);
+  padding: 0 20px;
 }
 
 header {
@@ -166,26 +173,34 @@ section {
 nav {
   float: left;
   display: block;
-  width: 250px;
-  background: #fff;
+  width: 290px;
+  background: black;
   overflow: auto;
   position: fixed;
   height: 100%;
+  padding: 0 20px;
 }
 
 nav #nav-search{
-    width: 210px;
-    height: 30px;
-    padding: 5px 10px;
-    font-size: 12px;
-    line-height: 1.5;
-    border-radius: 3px;
-    margin-right: 20px;
-    margin-top: 20px;
+  padding: 7px;
+  width: 90%;
+  color: #aaa;
+  border: 1px solid #585858;
+  background-color: #373737;
+  border-radius: 2px;
+  line-height: 1.5;
+  margin-top: 20px;
 }
 
 nav.wrap a{
     word-wrap: break-word;
+}
+
+nav .title h1 {
+  color: #fff;
+  text-align: center;
+  font-size: 40px;
+  text-transform: capitalize;
 }
 
 nav h3 {
@@ -197,7 +212,7 @@ nav h3 {
   line-height: 24px;
   margin: 15px 0 10px;
   padding: 0;
-  color: #000;
+  color: #fff;
 }
 
 nav ul {
@@ -218,32 +233,22 @@ nav ul a:active {
   font-size: 12px;
 }
 
-nav a:hover,
-nav a:active {
-  color: #606;
-}
-
 nav > ul {
   padding: 0 10px;
 }
 
-nav > ul > li {
-  margin-bottom: 5px;
-}
-
 nav > ul > li > a {
-  color: #606;
   margin-top: 10px;
 }
 
 nav ul ul a {
   color: hsl(207, 1%, 60%);
-  border-left: 1px solid hsl(207, 10%, 86%);
 }
 
 nav ul ul a,
 nav ul ul a:active {
-  padding-left: 20px
+  padding-left: 20px;
+  margin-bottom: 5px;
 }
 
 nav h2 {
@@ -254,16 +259,15 @@ nav h2 {
 
 nav > h2 > a {
    margin: 10px 0 -10px;
-   color: #606 !important;
 }
 
-footer {
-  color: hsl(0, 0%, 28%);
-  margin-left: 250px;
-  display: block;
-  padding: 15px;
-  font-style: italic;
-  font-size: 90%;
+.separator {
+  width: 7px;
+  position: fixed;
+  left: 290px;
+  height: 100%;
+  background-color: #4c6a75;
+  cursor: col-resize;
 }
 
 .ancestors {
@@ -288,7 +292,7 @@ footer {
 }
 
 .type-signature {
-  color: #CA79CA
+  color: #7cafc2
 }
 
 .type-signature:last-child {
@@ -300,7 +304,7 @@ footer {
 }
 
 .signature {
-    color: #fc83ff;
+    color: #7cafc2;
 }
 
 .details {
@@ -410,6 +414,12 @@ footer {
    -moz-user-select: text;
    -ms-user-select: text;
    user-select: text;
+}
+
+.prettyprint.linenums li code:empty:after {
+  content:"";
+  display:inline-block;
+  width:0px;
 }
 
 table {
@@ -617,7 +627,7 @@ html[data-search-mode] .level-hide {
 }
 
 
-@media only screen and (min-width: 320px) and (max-width: 680px) {
+@media only screen and (max-width: 680px) {
   body {
     overflow-x: hidden;
   }
@@ -646,7 +656,6 @@ html[data-search-mode] .level-hide {
 
   #main {
     width: 100%;
-    min-width: 360px;
   }
 
   #main h1.page-title {
@@ -672,4 +681,33 @@ html[data-search-mode] .level-hide {
 
 #disqus_thread{
     margin-left: 30px;
+}
+
+.readme h1{
+  text-align: center;
+  text-transform: capitalize;
+  font-size: 44px;
+  margin: 0.5em;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/Montserrat-Regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/Montserrat-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Montserrat-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Montserrat-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/Montserrat-Regular.ttf')  format('truetype'); /* Safari, Android, iOS */
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/Montserrat-Bold.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/Montserrat-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Montserrat-Bold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Montserrat-Bold.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/Montserrat-Bold.ttf')  format('truetype'); /* Safari, Android, iOS */
 }
